<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/titulo"
        android:id="@+id/titulo"
        android:text="@string/titulo"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/espacio"
        android:layout_below="@+id/titulo">

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:inputType="textAutoComplete"
            android:textSize="@dimen/tamaño_texto"/>

        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio"
            android:hint="@string/fecha"
            android:textSize="@dimen/tamaño_texto"/>


        <EditText
            android:id="@+id/txtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio"
            android:hint="@string/telefono"
            android:inputType="phone"
            android:textSize="@dimen/tamaño_texto"/>

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/tamaño_texto"/>

        <EditText
            android:id="@+id/txtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio"
            android:hint="@string/descripcion"
            android:inputType="textMultiLine"
            android:textSize="@dimen/tamaño_texto"/>

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/siguiente"
            android:onClick="siguiente"
            android:textSize="@dimen/tamaño_texto"
            android:layout_marginTop="@dimen/espacio"/>
    </LinearLayout>



</RelativeLayout>